# Kvazar

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt
Client/src/: main.cpp
Kvazar/: CMakeLists.txt  Kvazar.h  KvazarDependencies.cmake  KvazarPch.h
Kvazar/Core/: Application.cpp  Application.h  LogSystem.cpp  LogSystem.h
Kvazar/Core/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h
Kvazar/Platform/: Window.cpp  Window.h
Kvazar/Platform/Vulkan/: VMA.cpp  VMA.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImage.cpp  VulkanImage.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Kvazar/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Kvazar/Renderer/: GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Surface.h  SwapChain.h
Kvazar/Utils/: KvazarUtils.cpp  KvazarUtils.h
Plans/: Plans.txt
Scripts/: DebugBuild.bat
